# Hivemind

./: .dockerignore  .env.example  .gitignore  API_DOCS.md  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  database.py  logger.py  main.py  vector_store.py
app/controllers/: crawl_controller.py  faq_controller.py  item_controller.py  query_controller.py
app/models/: conversation_model.py  crawl_index_model.py  faq_model.py  item_model.py
app/repositories/: conversation_repository.py  crawl_index_repository.py  faq_repository.py  item_repository.py
app/schemas/: crawl_schema.py  faq_schema.py  item_schema.py  query_schema.py  response.py
app/services/: crawl_service.py  embedding_service.py  faq_service.py  item_service.py  query_service.py  retrieval_service.py
